# RN-Audible-Liberator

./: .env.example  .gitignore  AGENT_IMPLEMENTATION_PLAN.md  ANALYSIS_SUMMARY.md  App.tsx  CLAUDE.md  DESKTOP_DEVELOPMENT.md  DOWNLOAD_MANAGER_COMPLETE.md  DOWNLOAD_MANAGER_DESIGN.md  Dockerfile  IMPLEMENTATION_PROGRESS.md  LIBATION_PORT_PLAN.md  NOTICE  PROGRESS.md  README.md  SETUP.md  TESTING_GUIDE.md  WORKMANAGER_ARCHITECTURE.md  app.config.js  app.json  docker-build.sh  docker-compose.yml  eas.json  package-lock.json  package.json
.github/workflows/: build-release.yml
modules/expo-rust-bridge/: EXAMPLES.ts  README.md  expo-module.config.json  index.ts  package.json
modules/expo-rust-bridge/android/: build.gradle
modules/expo-rust-bridge/android/src/main/: AndroidManifest.xml
modules/expo-rust-bridge/android/src/main/java/expo/modules/rustbridge/: ConversionManager.kt  DownloadActionReceiver.kt  DownloadNotificationManager.kt  DownloadOrchestrator.kt  DownloadService.kt  ExpoRustBridgeModule.kt
native/rust-core/: Cargo.toml  FIX_TESTS.md  IMPLEMENTATION_STATUS.md  PROJECT_STATUS.md  README.md  build.rs
native/rust-core/.cargo/: config.toml
native/rust-core/examples/: basic_test.rs
native/rust-core/src/: error.rs  ios_bridge.rs  jni_bridge.rs  lib.rs  rust_core.udl
native/rust-core/src/api/: auth.rs  client.rs  content.rs  customer.rs  library.rs  license.rs  mod.rs  registration.rs
native/rust-core/src/audio/: converter.rs  decoder.rs  metadata.rs  mod.rs
native/rust-core/src/crypto/: aax.rs  aaxc.rs  activation.rs  mod.rs  widevine.rs
native/rust-core/src/download/: manager.rs  mod.rs  persistent_manager.rs  progress.rs  stream.rs
native/rust-core/src/file/: manager.rs  mod.rs  paths.rs  scanner.rs
native/rust-core/src/storage/: accounts.rs  database.rs  migrations.rs  mod.rs  models.rs  queries.rs
native/rust-core/tests/: download_manager_integration.rs
plugins/: withDownloadService.js  withFFmpegKit.js  withReleaseSigning.js
scripts/: README.md  build-rust-android.sh  build-rust-ios.sh  build-rust.sh  patch-gradle-version.sh  test-and-run.sh  test-rust-desktop.sh
src/components/: Button.tsx  LocaleSelector.tsx  OAuthWebView.tsx
src/hooks/: README.md
src/navigation/: AppNavigator.tsx
src/screens/: AccountScreen.tsx  LibraryScreen.tsx  LibriVoxBrowseScreen.tsx  LoginScreen.tsx  SettingsScreen.tsx  SimpleAccountScreen.tsx  TaskDebugScreen.tsx
src/services/: librivox.ts
src/styles/: theme.ts
(+10 files in other folders)
